add more counties and add commute data

--- a/eda/eda_nytimes/01_EDA_nytimes.ipynb
+++ b/eda/eda_nytimes/01_EDA_nytimes.ipynb
@@ -20,17 +20,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
     "# load data\n",
-    "deaths = pd.read_csv(\"../../data/nytimes/deaths.csv\", dtype={'countyFIPS':str})"
+    "deaths = pd.read_csv(\"../../../uploader/data/nytimes/deaths.csv\", dtype={'countyFIPS':str})\n",
+    "confirmed = pd.read_csv(\"../../../uploader/data/nytimes/confirmed_cases.csv\", dtype={'countyFIPS':str})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -78,108 +79,20 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>443</th>\n",
-       "      <td>Fulton</td>\n",
-       "      <td>GA</td>\n",
-       "      <td>13121</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>12.0</td>\n",
-       "      <td>13.0</td>\n",
-       "      <td>12.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>724</th>\n",
-       "      <td>Hendricks</td>\n",
-       "      <td>IN</td>\n",
-       "      <td>18063</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1259</th>\n",
-       "      <td>Ingham</td>\n",
-       "      <td>MI</td>\n",
-       "      <td>26065</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>3 rows × 72 columns</p>\n",
+       "<p>0 rows × 72 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "     county name state countyFIPS  01-21-2020  01-22-2020  01-23-2020  \\\n",
-       "443       Fulton    GA      13121         0.0         0.0         0.0   \n",
-       "724    Hendricks    IN      18063         0.0         0.0         0.0   \n",
-       "1259      Ingham    MI      26065         0.0         0.0         0.0   \n",
+       "Empty DataFrame\n",
+       "Columns: [county name, state, countyFIPS, 01-21-2020, 01-22-2020, 01-23-2020, 01-24-2020, 01-25-2020, 01-26-2020, 01-27-2020, 01-28-2020, 01-29-2020, 01-30-2020, 01-31-2020, 02-01-2020, 02-02-2020, 02-03-2020, 02-04-2020, 02-05-2020, 02-06-2020, 02-07-2020, 02-08-2020, 02-09-2020, 02-10-2020, 02-11-2020, 02-12-2020, 02-13-2020, 02-14-2020, 02-15-2020, 02-16-2020, 02-17-2020, 02-18-2020, 02-19-2020, 02-20-2020, 02-21-2020, 02-22-2020, 02-23-2020, 02-24-2020, 02-25-2020, 02-26-2020, 02-27-2020, 02-28-2020, 02-29-2020, 03-01-2020, 03-02-2020, 03-03-2020, 03-04-2020, 03-05-2020, 03-06-2020, 03-07-2020, 03-08-2020, 03-09-2020, 03-10-2020, 03-11-2020, 03-12-2020, 03-13-2020, 03-14-2020, 03-15-2020, 03-16-2020, 03-17-2020, 03-18-2020, 03-19-2020, 03-20-2020, 03-21-2020, 03-22-2020, 03-23-2020, 03-24-2020, 03-25-2020, 03-26-2020, 03-27-2020, 03-28-2020, 03-29-2020]\n",
+       "Index: []\n",
        "\n",
-       "      01-24-2020  01-25-2020  01-26-2020  01-27-2020  ...  03-20-2020  \\\n",
-       "443          0.0         0.0         0.0         0.0  ...         2.0   \n",
-       "724          0.0         0.0         0.0         0.0  ...         0.0   \n",
-       "1259         0.0         0.0         0.0         0.0  ...         0.0   \n",
-       "\n",
-       "      03-21-2020  03-22-2020  03-23-2020  03-24-2020  03-25-2020  03-26-2020  \\\n",
-       "443          3.0         3.0         3.0         4.0         4.0         4.0   \n",
-       "724          0.0         0.0         0.0         0.0         0.0         0.0   \n",
-       "1259         0.0         0.0         0.0         0.0         0.0         0.0   \n",
-       "\n",
-       "      03-27-2020  03-28-2020  03-29-2020  \n",
-       "443         12.0        13.0        12.0  \n",
-       "724          2.0         2.0         1.0  \n",
-       "1259         1.0         1.0         0.0  \n",
-       "\n",
-       "[3 rows x 72 columns]"
+       "[0 rows x 72 columns]"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -188,6 +101,86 @@
     "# visualize the rows that has non-increasing deaths\n",
     "deaths[np.diff(deaths.iloc[:, 3:]).min(axis=1) < 0]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>county name</th>\n",
+       "      <th>state</th>\n",
+       "      <th>countyFIPS</th>\n",
+       "      <th>01-21-2020</th>\n",
+       "      <th>01-22-2020</th>\n",
+       "      <th>01-23-2020</th>\n",
+       "      <th>01-24-2020</th>\n",
+       "      <th>01-25-2020</th>\n",
+       "      <th>01-26-2020</th>\n",
+       "      <th>01-27-2020</th>\n",
+       "      <th>...</th>\n",
+       "      <th>03-20-2020</th>\n",
+       "      <th>03-21-2020</th>\n",
+       "      <th>03-22-2020</th>\n",
+       "      <th>03-23-2020</th>\n",
+       "      <th>03-24-2020</th>\n",
+       "      <th>03-25-2020</th>\n",
+       "      <th>03-26-2020</th>\n",
+       "      <th>03-27-2020</th>\n",
+       "      <th>03-28-2020</th>\n",
+       "      <th>03-29-2020</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>0 rows × 72 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [county name, state, countyFIPS, 01-21-2020, 01-22-2020, 01-23-2020, 01-24-2020, 01-25-2020, 01-26-2020, 01-27-2020, 01-28-2020, 01-29-2020, 01-30-2020, 01-31-2020, 02-01-2020, 02-02-2020, 02-03-2020, 02-04-2020, 02-05-2020, 02-06-2020, 02-07-2020, 02-08-2020, 02-09-2020, 02-10-2020, 02-11-2020, 02-12-2020, 02-13-2020, 02-14-2020, 02-15-2020, 02-16-2020, 02-17-2020, 02-18-2020, 02-19-2020, 02-20-2020, 02-21-2020, 02-22-2020, 02-23-2020, 02-24-2020, 02-25-2020, 02-26-2020, 02-27-2020, 02-28-2020, 02-29-2020, 03-01-2020, 03-02-2020, 03-03-2020, 03-04-2020, 03-05-2020, 03-06-2020, 03-07-2020, 03-08-2020, 03-09-2020, 03-10-2020, 03-11-2020, 03-12-2020, 03-13-2020, 03-14-2020, 03-15-2020, 03-16-2020, 03-17-2020, 03-18-2020, 03-19-2020, 03-20-2020, 03-21-2020, 03-22-2020, 03-23-2020, 03-24-2020, 03-25-2020, 03-26-2020, 03-27-2020, 03-28-2020, 03-29-2020]\n",
+       "Index: []\n",
+       "\n",
+       "[0 rows x 72 columns]"
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# visualize the rows that has non-increasing deaths\n",
+    "confirmed[np.diff(confirmed.iloc[:, 3:]).min(axis=1) < 0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
