--- a/02_hospital_eda.ipynb
+++ b/02_hospital_eda.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -41,32 +32,26 @@
     "# df_county = exponential_modeling.estimate_deaths(df_county) # adds key \n",
     "for num_days_in_future in NUM_DAYS_LIST: # 1 is tomorrow\n",
     "    output_key = f'Predicted Deaths {num_days_in_future}-day'    \n",
-    "    '''\n",
     "    df_county = fit_and_predict(df_county, \n",
     "                                method='ensemble', \n",
-    "                                outcome='tot_deaths',\n",
+    "                                outcome='deaths',\n",
     "                                mode='predict_future',\n",
-    "                                target_day=[num_days_in_future],\n",
+    "                                target_day=np.array([num_days_in_future]),\n",
     "                                output_key=output_key\n",
     "                               )\n",
-    "    '''\n",
-    "    '''\n",
-    "    df_county = estimate_deaths(df_county, mode='predict_future',\n",
-    "                                method='exponential', target_day=[num_days_in_future],\n",
-    "                                output_key=output_key) # adds key \n",
+    "    \n",
+    "    # extract out vals from list\n",
     "    vals = df_county[output_key].values\n",
-    "    df_county[output_key] = [vals[i][0] for i in range(df_county.shape[0])]\n",
-    "    '''\n",
+    "    out = []\n",
+    "    for i in range(vals.shape[0]):\n",
+    "        if np.isnan(vals[i]):\n",
+    "            out.append(0)\n",
+    "        else:\n",
+    "            out.append(vals[i][0])\n",
+    "    df_county[output_key] = out\n",
     "df = df_hospital.merge(df_county, how='left', on='countyFIPS')\n",
-    "df[outcomes] = df[outcomes].fillna(0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "df[outcomes] = df[outcomes].fillna(0)\n",
+    "\n",
     "# aggregate employees by county\n",
     "total_emp_county = df.groupby('countyFIPS').agg({'Hospital Employees': 'sum'})\n",
     "total_emp_county = total_emp_county.rename(columns={'Hospital Employees': 'Hospital Employees in County'})\n",
@@ -84,21 +69,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df['Predicted Deaths Hospital-level'] = df['Predicted Deaths 1-day'] * df['Frac Hospital Employees of County']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
     "for num_days in NUM_DAYS_LIST:\n",
-    "    df[f'Severity {num_days}-day'] = np.random.randint(low=1, high=5, size=df.shape[0])"
+    "    df[f'Predicted Deaths Hospital {num_days}-day'] = df['Predicted Deaths 1-day'] * df['Frac Hospital Employees of County']\n",
+    "    df[f'Severity {num_days}-day'] = pd.qcut(df[f'Predicted Deaths Hospital {num_days}-day'], 5, labels=False) + 1\n",
+    "#     df[f'Quantile {num_days}-day'] = "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "max, min 4 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('max, min', df[f'Quantile 1-day'].max(), df[f'Quantile 1-day'].min())"
    ]
   },
   {
@@ -132,16 +127,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "(df[f'Predicted Deaths {num_days}-day'][nonzero]).head(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "R, C  = 1, 2\n",
-    "nonzero = df['Predicted Deaths 1-day'] > 0\n",
+    "num_days = 1\n",
+    "nonzero = df[f'Predicted Deaths {num_days}-day'] > 0\n",
     "plt.figure(dpi=300)\n",
     "plt.subplot(R, C, 1)\n",
-    "plt.hist(df['Predicted Deaths 1-day'][nonzero])\n",
+    "plt.hist(df[f'Predicted Deaths {num_days}-day'][nonzero])\n",
     "plt.xlabel('Predicted Number of Deaths')\n",
     "plt.ylabel('Num Hospitals')\n",
     "\n",
     "plt.subplot(R, C, 2)\n",
-    "plt.hist(df['Predicted Deaths Hospital-level'][nonzero])\n",
+    "plt.hist(df[f'Predicted Deaths Hospital {num_days}-day'][nonzero])\n",
     "plt.xlabel('Predicted Number of Deaths * Num Employees')\n",
     "plt.ylabel('Num Hospitals')\n",
     "plt.tight_layout()\n",
@@ -182,7 +187,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.sort_values('Predicted Deaths Hospital-level', ascending=False)[['Predicted Deaths Hospital-level', 'Hospital Name', 'State_x', \n",
+    "df.sort_values('Predicted Deaths Hospital-level', ascending=False)[['Predicted Deaths Hospital-level', \n",
+    "                                                                    'Hospital Name', 'State_x', \n",
     "                                                                    'Hospital Employees', 'tot_deaths']].head(30)"
    ]
   },
