rewriting ensemble prediction function

--- a/modeling/visualization.ipynb
+++ b/modeling/visualization.ipynb
@@ -52,11 +52,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
-    "preds_df = pd.read_pickle(\"multi_day_3.pkl\")"
+    "preds_df = pd.read_pickle(\"multi_day_5.pkl\")"
    ]
   },
   {
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
     "        residuals[colname] = []\n",
     "        for method in ['exponential', 'shared_exponential', 'ensemble']:\n",
     "            key = f'predicted_deaths_{method}_{days_ahead}'\n",
-    "            preds = [p[-1] for p in preds_df[key][outcome > lower_threshold]]\n",
+    "            preds = [p for p in preds_df[key][outcome > lower_threshold]]\n",
     "            residuals[colname].append(l1(outcome[outcome > lower_threshold],preds))\n",
     "            if method == 'shared_exponential':\n",
     "                key = f'predicted_deaths_{method}_{days_ahead}_demographics'\n",
@@ -107,87 +107,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<style  type=\"text/css\" >\n",
-       "    #T_9c089574_7383_11ea_b5ad_18037319446drow1_col1 {\n",
+       "    #T_e77703c4_739c_11ea_b5ad_18037319446drow0_col0 {\n",
        "            background-color:  yellow;\n",
-       "        }    #T_9c089574_7383_11ea_b5ad_18037319446drow1_col2 {\n",
+       "        }    #T_e77703c4_739c_11ea_b5ad_18037319446drow0_col3 {\n",
        "            background-color:  yellow;\n",
-       "        }    #T_9c089574_7383_11ea_b5ad_18037319446drow1_col4 {\n",
+       "        }    #T_e77703c4_739c_11ea_b5ad_18037319446drow0_col6 {\n",
        "            background-color:  yellow;\n",
-       "        }    #T_9c089574_7383_11ea_b5ad_18037319446drow1_col5 {\n",
+       "        }    #T_e77703c4_739c_11ea_b5ad_18037319446drow1_col1 {\n",
        "            background-color:  yellow;\n",
-       "        }    #T_9c089574_7383_11ea_b5ad_18037319446drow2_col7 {\n",
+       "        }    #T_e77703c4_739c_11ea_b5ad_18037319446drow1_col2 {\n",
        "            background-color:  yellow;\n",
-       "        }    #T_9c089574_7383_11ea_b5ad_18037319446drow3_col0 {\n",
+       "        }    #T_e77703c4_739c_11ea_b5ad_18037319446drow1_col4 {\n",
        "            background-color:  yellow;\n",
-       "        }    #T_9c089574_7383_11ea_b5ad_18037319446drow3_col3 {\n",
+       "        }    #T_e77703c4_739c_11ea_b5ad_18037319446drow1_col5 {\n",
        "            background-color:  yellow;\n",
-       "        }    #T_9c089574_7383_11ea_b5ad_18037319446drow3_col6 {\n",
+       "        }    #T_e77703c4_739c_11ea_b5ad_18037319446drow3_col7 {\n",
        "            background-color:  yellow;\n",
-       "        }    #T_9c089574_7383_11ea_b5ad_18037319446drow3_col8 {\n",
+       "        }    #T_e77703c4_739c_11ea_b5ad_18037319446drow3_col8 {\n",
        "            background-color:  yellow;\n",
-       "        }</style><table id=\"T_9c089574_7383_11ea_b5ad_18037319446d\" ><thead>    <tr>        <th class=\"blank level0\" ></th>        <th class=\"col_heading level0 col0\" >1 day, deaths>=0</th>        <th class=\"col_heading level0 col1\" >1 day, deaths>=20</th>        <th class=\"col_heading level0 col2\" >1 day, deaths>=80</th>        <th class=\"col_heading level0 col3\" >2 day, deaths>=0</th>        <th class=\"col_heading level0 col4\" >2 day, deaths>=20</th>        <th class=\"col_heading level0 col5\" >2 day, deaths>=80</th>        <th class=\"col_heading level0 col6\" >3 day, deaths>=0</th>        <th class=\"col_heading level0 col7\" >3 day, deaths>=20</th>        <th class=\"col_heading level0 col8\" >3 day, deaths>=80</th>    </tr></thead><tbody>\n",
+       "        }</style><table id=\"T_e77703c4_739c_11ea_b5ad_18037319446d\" ><thead>    <tr>        <th class=\"blank level0\" ></th>        <th class=\"col_heading level0 col0\" >1 day, deaths>=0</th>        <th class=\"col_heading level0 col1\" >1 day, deaths>=20</th>        <th class=\"col_heading level0 col2\" >1 day, deaths>=80</th>        <th class=\"col_heading level0 col3\" >2 day, deaths>=0</th>        <th class=\"col_heading level0 col4\" >2 day, deaths>=20</th>        <th class=\"col_heading level0 col5\" >2 day, deaths>=80</th>        <th class=\"col_heading level0 col6\" >3 day, deaths>=0</th>        <th class=\"col_heading level0 col7\" >3 day, deaths>=20</th>        <th class=\"col_heading level0 col8\" >3 day, deaths>=80</th>    </tr></thead><tbody>\n",
        "                <tr>\n",
-       "                        <th id=\"T_9c089574_7383_11ea_b5ad_18037319446dlevel0_row0\" class=\"row_heading level0 row0\" >exponential</th>\n",
-       "                        <td id=\"T_9c089574_7383_11ea_b5ad_18037319446drow0_col0\" class=\"data row0 col0\" >1.28</td>\n",
-       "                        <td id=\"T_9c089574_7383_11ea_b5ad_18037319446drow0_col1\" class=\"data row0 col1\" >10.80</td>\n",
-       "                        <td id=\"T_9c089574_7383_11ea_b5ad_18037319446drow0_col2\" class=\"data row0 col2\" >22.07</td>\n",
-       "                        <td id=\"T_9c089574_7383_11ea_b5ad_18037319446drow0_col3\" class=\"data row0 col3\" >2.86</td>\n",
-       "                        <td id=\"T_9c089574_7383_11ea_b5ad_18037319446drow0_col4\" class=\"data row0 col4\" >22.57</td>\n",
-       "                        <td id=\"T_9c089574_7383_11ea_b5ad_18037319446drow0_col5\" class=\"data row0 col5\" >41.04</td>\n",
-       "                        <td id=\"T_9c089574_7383_11ea_b5ad_18037319446drow0_col6\" class=\"data row0 col6\" >4.03</td>\n",
-       "                        <td id=\"T_9c089574_7383_11ea_b5ad_18037319446drow0_col7\" class=\"data row0 col7\" >29.76</td>\n",
-       "                        <td id=\"T_9c089574_7383_11ea_b5ad_18037319446drow0_col8\" class=\"data row0 col8\" >23.34</td>\n",
+       "                        <th id=\"T_e77703c4_739c_11ea_b5ad_18037319446dlevel0_row0\" class=\"row_heading level0 row0\" >exponential</th>\n",
+       "                        <td id=\"T_e77703c4_739c_11ea_b5ad_18037319446drow0_col0\" class=\"data row0 col0\" >1.28</td>\n",
+       "                        <td id=\"T_e77703c4_739c_11ea_b5ad_18037319446drow0_col1\" class=\"data row0 col1\" >10.80</td>\n",
+       "                        <td id=\"T_e77703c4_739c_11ea_b5ad_18037319446drow0_col2\" class=\"data row0 col2\" >22.07</td>\n",
+       "                        <td id=\"T_e77703c4_739c_11ea_b5ad_18037319446drow0_col3\" class=\"data row0 col3\" >2.86</td>\n",
+       "                        <td id=\"T_e77703c4_739c_11ea_b5ad_18037319446drow0_col4\" class=\"data row0 col4\" >22.57</td>\n",
+       "                        <td id=\"T_e77703c4_739c_11ea_b5ad_18037319446drow0_col5\" class=\"data row0 col5\" >41.04</td>\n",
+       "                        <td id=\"T_e77703c4_739c_11ea_b5ad_18037319446drow0_col6\" class=\"data row0 col6\" >4.03</td>\n",
+       "                        <td id=\"T_e77703c4_739c_11ea_b5ad_18037319446drow0_col7\" class=\"data row0 col7\" >29.76</td>\n",
+       "                        <td id=\"T_e77703c4_739c_11ea_b5ad_18037319446drow0_col8\" class=\"data row0 col8\" >23.34</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                        <th id=\"T_9c089574_7383_11ea_b5ad_18037319446dlevel0_row1\" class=\"row_heading level0 row1\" >shared</th>\n",
-       "                        <td id=\"T_9c089574_7383_11ea_b5ad_18037319446drow1_col0\" class=\"data row1 col0\" >1.48</td>\n",
-       "                        <td id=\"T_9c089574_7383_11ea_b5ad_18037319446drow1_col1\" class=\"data row1 col1\" >5.82</td>\n",
-       "                        <td id=\"T_9c089574_7383_11ea_b5ad_18037319446drow1_col2\" class=\"data row1 col2\" >8.29</td>\n",
-       "                        <td id=\"T_9c089574_7383_11ea_b5ad_18037319446drow1_col3\" class=\"data row1 col3\" >3.53</td>\n",
-       "                        <td id=\"T_9c089574_7383_11ea_b5ad_18037319446drow1_col4\" class=\"data row1 col4\" >11.77</td>\n",
-       "                        <td id=\"T_9c089574_7383_11ea_b5ad_18037319446drow1_col5\" class=\"data row1 col5\" >20.20</td>\n",
-       "                        <td id=\"T_9c089574_7383_11ea_b5ad_18037319446drow1_col6\" class=\"data row1 col6\" >6.21</td>\n",
-       "                        <td id=\"T_9c089574_7383_11ea_b5ad_18037319446drow1_col7\" class=\"data row1 col7\" >19.61</td>\n",
-       "                        <td id=\"T_9c089574_7383_11ea_b5ad_18037319446drow1_col8\" class=\"data row1 col8\" >42.49</td>\n",
+       "                        <th id=\"T_e77703c4_739c_11ea_b5ad_18037319446dlevel0_row1\" class=\"row_heading level0 row1\" >shared</th>\n",
+       "                        <td id=\"T_e77703c4_739c_11ea_b5ad_18037319446drow1_col0\" class=\"data row1 col0\" >1.48</td>\n",
+       "                        <td id=\"T_e77703c4_739c_11ea_b5ad_18037319446drow1_col1\" class=\"data row1 col1\" >5.82</td>\n",
+       "                        <td id=\"T_e77703c4_739c_11ea_b5ad_18037319446drow1_col2\" class=\"data row1 col2\" >8.29</td>\n",
+       "                        <td id=\"T_e77703c4_739c_11ea_b5ad_18037319446drow1_col3\" class=\"data row1 col3\" >3.53</td>\n",
+       "                        <td id=\"T_e77703c4_739c_11ea_b5ad_18037319446drow1_col4\" class=\"data row1 col4\" >11.77</td>\n",
+       "                        <td id=\"T_e77703c4_739c_11ea_b5ad_18037319446drow1_col5\" class=\"data row1 col5\" >20.20</td>\n",
+       "                        <td id=\"T_e77703c4_739c_11ea_b5ad_18037319446drow1_col6\" class=\"data row1 col6\" >6.21</td>\n",
+       "                        <td id=\"T_e77703c4_739c_11ea_b5ad_18037319446drow1_col7\" class=\"data row1 col7\" >19.61</td>\n",
+       "                        <td id=\"T_e77703c4_739c_11ea_b5ad_18037319446drow1_col8\" class=\"data row1 col8\" >42.49</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                        <th id=\"T_9c089574_7383_11ea_b5ad_18037319446dlevel0_row2\" class=\"row_heading level0 row2\" >demographics</th>\n",
-       "                        <td id=\"T_9c089574_7383_11ea_b5ad_18037319446drow2_col0\" class=\"data row2 col0\" >1.81</td>\n",
-       "                        <td id=\"T_9c089574_7383_11ea_b5ad_18037319446drow2_col1\" class=\"data row2 col1\" >8.80</td>\n",
-       "                        <td id=\"T_9c089574_7383_11ea_b5ad_18037319446drow2_col2\" class=\"data row2 col2\" >16.87</td>\n",
-       "                        <td id=\"T_9c089574_7383_11ea_b5ad_18037319446drow2_col3\" class=\"data row2 col3\" >4.52</td>\n",
-       "                        <td id=\"T_9c089574_7383_11ea_b5ad_18037319446drow2_col4\" class=\"data row2 col4\" >20.58</td>\n",
-       "                        <td id=\"T_9c089574_7383_11ea_b5ad_18037319446drow2_col5\" class=\"data row2 col5\" >43.63</td>\n",
-       "                        <td id=\"T_9c089574_7383_11ea_b5ad_18037319446drow2_col6\" class=\"data row2 col6\" >9.29</td>\n",
-       "                        <td id=\"T_9c089574_7383_11ea_b5ad_18037319446drow2_col7\" class=\"data row2 col7\" >13.79</td>\n",
-       "                        <td id=\"T_9c089574_7383_11ea_b5ad_18037319446drow2_col8\" class=\"data row2 col8\" >22.27</td>\n",
+       "                        <th id=\"T_e77703c4_739c_11ea_b5ad_18037319446dlevel0_row2\" class=\"row_heading level0 row2\" >demographics</th>\n",
+       "                        <td id=\"T_e77703c4_739c_11ea_b5ad_18037319446drow2_col0\" class=\"data row2 col0\" >1.81</td>\n",
+       "                        <td id=\"T_e77703c4_739c_11ea_b5ad_18037319446drow2_col1\" class=\"data row2 col1\" >8.80</td>\n",
+       "                        <td id=\"T_e77703c4_739c_11ea_b5ad_18037319446drow2_col2\" class=\"data row2 col2\" >16.87</td>\n",
+       "                        <td id=\"T_e77703c4_739c_11ea_b5ad_18037319446drow2_col3\" class=\"data row2 col3\" >4.52</td>\n",
+       "                        <td id=\"T_e77703c4_739c_11ea_b5ad_18037319446drow2_col4\" class=\"data row2 col4\" >20.58</td>\n",
+       "                        <td id=\"T_e77703c4_739c_11ea_b5ad_18037319446drow2_col5\" class=\"data row2 col5\" >43.63</td>\n",
+       "                        <td id=\"T_e77703c4_739c_11ea_b5ad_18037319446drow2_col6\" class=\"data row2 col6\" >9.29</td>\n",
+       "                        <td id=\"T_e77703c4_739c_11ea_b5ad_18037319446drow2_col7\" class=\"data row2 col7\" >13.79</td>\n",
+       "                        <td id=\"T_e77703c4_739c_11ea_b5ad_18037319446drow2_col8\" class=\"data row2 col8\" >22.27</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                        <th id=\"T_9c089574_7383_11ea_b5ad_18037319446dlevel0_row3\" class=\"row_heading level0 row3\" >ensemble</th>\n",
-       "                        <td id=\"T_9c089574_7383_11ea_b5ad_18037319446drow3_col0\" class=\"data row3 col0\" >1.26</td>\n",
-       "                        <td id=\"T_9c089574_7383_11ea_b5ad_18037319446drow3_col1\" class=\"data row3 col1\" >7.76</td>\n",
-       "                        <td id=\"T_9c089574_7383_11ea_b5ad_18037319446drow3_col2\" class=\"data row3 col2\" >13.90</td>\n",
-       "                        <td id=\"T_9c089574_7383_11ea_b5ad_18037319446drow3_col3\" class=\"data row3 col3\" >2.70</td>\n",
-       "                        <td id=\"T_9c089574_7383_11ea_b5ad_18037319446drow3_col4\" class=\"data row3 col4\" >16.66</td>\n",
-       "                        <td id=\"T_9c089574_7383_11ea_b5ad_18037319446drow3_col5\" class=\"data row3 col5\" >29.72</td>\n",
-       "                        <td id=\"T_9c089574_7383_11ea_b5ad_18037319446drow3_col6\" class=\"data row3 col6\" >3.84</td>\n",
-       "                        <td id=\"T_9c089574_7383_11ea_b5ad_18037319446drow3_col7\" class=\"data row3 col7\" >18.72</td>\n",
-       "                        <td id=\"T_9c089574_7383_11ea_b5ad_18037319446drow3_col8\" class=\"data row3 col8\" >18.26</td>\n",
+       "                        <th id=\"T_e77703c4_739c_11ea_b5ad_18037319446dlevel0_row3\" class=\"row_heading level0 row3\" >ensemble</th>\n",
+       "                        <td id=\"T_e77703c4_739c_11ea_b5ad_18037319446drow3_col0\" class=\"data row3 col0\" >1.33</td>\n",
+       "                        <td id=\"T_e77703c4_739c_11ea_b5ad_18037319446drow3_col1\" class=\"data row3 col1\" >7.59</td>\n",
+       "                        <td id=\"T_e77703c4_739c_11ea_b5ad_18037319446drow3_col2\" class=\"data row3 col2\" >13.68</td>\n",
+       "                        <td id=\"T_e77703c4_739c_11ea_b5ad_18037319446drow3_col3\" class=\"data row3 col3\" >2.96</td>\n",
+       "                        <td id=\"T_e77703c4_739c_11ea_b5ad_18037319446drow3_col4\" class=\"data row3 col4\" >17.04</td>\n",
+       "                        <td id=\"T_e77703c4_739c_11ea_b5ad_18037319446drow3_col5\" class=\"data row3 col5\" >32.36</td>\n",
+       "                        <td id=\"T_e77703c4_739c_11ea_b5ad_18037319446drow3_col6\" class=\"data row3 col6\" >4.51</td>\n",
+       "                        <td id=\"T_e77703c4_739c_11ea_b5ad_18037319446drow3_col7\" class=\"data row3 col7\" >13.36</td>\n",
+       "                        <td id=\"T_e77703c4_739c_11ea_b5ad_18037319446drow3_col8\" class=\"data row3 col8\" >10.39</td>\n",
        "            </tr>\n",
        "    </tbody></table>"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x7f741050a690>"
+       "<pandas.io.formats.style.Styler at 0x7f740cde0510>"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1796,22 +1796,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "weighted_preds = [np.zeros(1) for i in range(5)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0 1\n",
-      "1 2\n",
-      "2 3\n"
-     ]
+     "data": {
+      "text/plain": [
+       "array([0.])"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "for (i, m) in enumerate([1, 2, 3]):\n",
-    "    print(i, m)"
+    "weighted_preds[0]"
    ]
   },
   {
